<resources>
    <string name="app_name">bask</string>
    <string name="add_record">+</string>
	<string name="listtext">Список:</string>
	<string name="listdate">Дата:</string>
	<string name="add_close">x</string>
	<string name="del_record">-</string>
	<string name="edit">Редактировать</string>
	<string name="del_item">Удалить</string>
	<string name="hint_namelist">Товар:</string>
	<string name="hint_countlist">Количество:</string>
	<string name="hint_pricelist">Цена:</string>
	<string name="list_record">:*</string>
</resources>
